# voice-lab

./: .dockerignore  .env.example  .gitignore  .gitleaks.toml  AGENTS.md  Dockerfile  Dockerfile.runpod  LICENSE  README.md  SECURITY.md  TASK.md  THIRD_PARTY_NOTICES.md  package-lock.json  package.json  playwright.config.ts  pyproject.toml  wrangler.toml
.githooks/: pre-commit  pre-push
.github/: dependabot.yml
cloudflare/: worker.mjs
docs/: PRIVACY_POLICY.md  UI_STYLE.md  UI_TESTING.md
migrations/: 0001_public_demo_storage.sql  0002_public_samples.sql  0003_public_user_email.sql
scripts/: benchmark_pipeline.py  benchmark_practice_alignment.mjs  benchmark_practice_alignment.py  build_asr_comparison_pair_corpus.py  build_practice_alignment_canonical_overlays.py  check_dockerhub_visibility.sh  ensure_frontend_license_notices.mjs  evaluate_fa_zh_alignment.py  evaluate_practice_alignment.mjs  evaluate_practice_alignment.py  evaluate_practice_alignment_canonical.mjs  evaluate_practice_alignment_canonical.py  evaluate_practice_quality_v2.py  evaluate_practice_quality_v2_matrix.py  install_git_hooks.sh  local_asr_comparison.py  local_asr_comparison_playback.mjs  local_asr_corpus.py  qwen_tts_synthesize.py  runpod.env.example  runpod_build_push.sh  runpod_common.sh  runpod_create_gpu_pod.sh  runpod_create_serverless_endpoint.sh  runpod_create_serverless_template.sh  runpod_create_volume.sh  runpod_deploy_serverless_image.sh  runpod_smoke_fastapi.sh  runpod_smoke_serverless.py  runpod_template_api.py  runpod_update_serverless_template.sh  smoke_cloudflare_deployment.py  verify_web_style_boundaries.mjs  verify_wheel_assets.py
tests/: app_user_static.test.mjs  cloudflare_worker.test.mjs  conftest.py  practice_alignment_canonical_contract.test.mjs  practice_alignment_canonical_evaluation.test.mjs  practice_alignment_parity.test.mjs  practice_alignment_worker.test.mjs  practice_llm_worker.test.mjs  practice_playback.test.mjs  practice_quality_v2.test.mjs  practice_quality_v2_matrix.test.mjs  public_users_ui.test.mjs  react_public_ui.test.mjs  test_api.py  test_api_refactor_modules.py  test_audio_effects.py  test_audio_history.py  test_benchmark.py  test_cloudflare_deploy_config.py  test_cloudflare_deployment_smoke.py  test_dependabot_automation.py  test_env.py  test_fa_zh_alignment_harness.py  test_funasr_provider.py  test_internal_plans.py  test_pipeline.py  (+27 more)
(+170 files in other folders)
