[project]
name = "voice-lab"
version = "0.1.0"
description = "Voice Lab - a web app for speech practice, multi-speaker generation, translation, and voice conversion."
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.117",
  "OpenCC>=1.1.9",
  "pypinyin>=0.55",
  "python-multipart>=0.0.20",
  "uvicorn>=0.37",
]

[project.optional-dependencies]
dev = [
  "httpx>=0.27,<1",
  "httpx2>=2,<3",
  "numpy>=1.26",
  "pytest>=8.4",
]
local = [
  "accelerate>=1.0",
  "faster-whisper>=1.1",
  "torch==2.8.0",
  "transformers>=4.57.3,<6",
]
funasr = [
  "funasr==1.3.14",
  "torchaudio==2.8.0",
]
asr-eval = [
  "praat-parselmouth>=0.4.7,<0.5",
]
voice = [
  "qwen-tts==0.1.1",
  "seed-vc==0.4.3",
]
vibevoice = [
  "bitsandbytes",
  "conformer",
  "diffusers",
  "einops",
  "huggingface_hub",
  "librosa",
  "packaging",
  "s3tokenizer",
  "safetensors",
  "soundfile",
  "tokenizers",
  "tqdm",
]
url-reference = [
  "yt-dlp[curl-cffi]",
]
vc-compare = [
  "chatterbox-tts>=0.1.7",
]
deploy = [
  "runpod>=1.7",
]
openai = [
  "openai>=2.0",
  "websocket-client>=1.8",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
mo_speech = [
  "web/*.html",
  "web/*.css",
  "web/*.js",
  "web/react/*.html",
  "web/react/*.ico",
  "web/react/assets/*.css",
  "web/react/assets/*.js",
  "web/react/assets/*.md",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
